--- a/client/src/pages/auth/auth.module.css
+++ b/client/src/pages/auth/auth.module.css
@@ -15,14 +15,37 @@
 }
 .label{
     margin-bottom: 10px;
+    margin-top: 30px;
 }
 .input{
     max-width: 300px;
-    margin-bottom: 30px;
     padding: 6px 10px;
+    outline: none;
+    border: 1px solid black;
 }
-.error{}
+.input_error{
+    border-width: 2px;
+    border-color: #bd2f2f;
+}
+.error{
+    margin-top: 20px;
+    color: #bd2f2f;
+    text-align: center;
+    width: 100%;
+    font-size: 14px;
+}
+.text{}
+.link{
+    margin-left: 10px;
+    color: #4b4b9f;
+    transition: all .4s;
+}
+.link:hover{
+    color: #a84e32;
+}
 .button{
+    margin-top: 30px;
+    margin-bottom: 20px;
     align-self: center;
     padding: 10px 15px;
     background-color: transparent;
