Fixed margin-top auth page for small screens.

--- a/client/src/pages/auth/auth.module.css
+++ b/client/src/pages/auth/auth.module.css
@@ -34,7 +34,9 @@
     width: 100%;
     font-size: 14px;
 }
-.text{}
+.text{
+    text-align: center;
+}
 .link{
     margin-left: 10px;
     color: #4b4b9f;
@@ -59,4 +61,9 @@
     background-color: black;
     color: white;
     transition: .4s;
+}
+@media (max-width: 576px) {
+    .wrapper{
+        margin-top: 100px;
+    }
 }
