--- a/client/src/pages/home/index.module.css
+++ b/client/src/pages/home/index.module.css
@@ -1,7 +1,175 @@
 .main{
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.hero{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: calc(100vh - 100px);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 10;
+    color: white;
+}
+.hero::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 0.3;
+    z-index: 20;
+}
+.content{
+    position: relative;
+    margin-right: 10%;
+    z-index: 30;
+    max-width: 600px;
+    text-align: center;
 }
 .products{
     display: flex;
     gap: 20px;
 }
+.title{
+    text-transform: uppercase;
+    font-size: 48px;
+    line-height: 48px;
+    font-weight: bold;
+    margin-bottom: 48px;
+}
+.button{
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: .4s;
+    background-color: transparent;
+    border: 2px solid white;
+    color: inherit;
+}
+.button:hover{
+    background-color: white;
+    color: black;
+    transition: .4s;
+}
+
+/*NEW ARRIVALS*/
+.container{
+    margin: 48px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.container__title{
+    font-size: 48px;
+    line-height: 48px;
+}
+.container__subtitle{
+    font-size: 20px;
+    line-height: 48px;
+    margin-bottom: 48px;
+}
+.container__button{
+    background-color: #024E82;
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: .4s;
+    color: white;
+    margin-top: 50px;
+    border: 2px solid #024E82;
+}
+.container__button:hover{
+    background-color: white;
+    color: #024E82;
+    transition: .4s;
+}
+.new__wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 100%;
+}
+.new{
+    width: calc(25% - 20px);
+}
+/*NEW ARRIVALS*/
+
+/*BENEFITS*/
+.benefits{
+    margin: 65px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 80px;
+}
+.benefit{
+    width: calc(25% - (3 * 80px / 4));
+    font-size: 16px;
+    display: flex;
+    align-items: flex-start;
+}
+.benefit__img{
+    margin-right: 20px;
+}
+.benefit__content{}
+.benefit__title{
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.benefit__text{}
+/*BENEFITS*/
+
+
+/*PROMO*/
+.promos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.promo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: 100vh;
+    max-height: 530px;
+    color: white;
+}
+.promo__title{
+    font-size: 32px;
+    line-height: 48px;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+}
+.promo__text{
+    font-size: 18px;
+    margin-bottom: 32px;
+}
+.promo__button{
+    color: #024E82;
+    background-color: white;
+    font-size: 14px;
+    transition: .4s;
+}
+.promo__button:hover{
+    background-color: #024E82;
+    border-color: #024E82;
+    color: white;
+    transition: .4s;
+}
+.promo__content{
+    text-align: center;
+    width: 70%;
+}
+/*PROMO*/
