--- a/client/src/widgets/ProductLayout/index.module.css
+++ b/client/src/widgets/ProductLayout/index.module.css
@@ -7,10 +7,11 @@
     border-bottom-right-radius: 20px;
 }
 .img{
+    width: 100%;
     height: 100%;
-    max-height: 300px;
 }
 .img_wrapper{
+    width: 100%;
     height: 100%;
 }
 .content{
@@ -19,6 +20,7 @@
 }
 .title{
     margin-bottom: 20px;
+    height: 70px;
 }
 .price{}
 .sizes{}
